--- a/Mi Primera Tabla/Base.lproj/Main.storyboard
+++ b/Mi Primera Tabla/Base.lproj/Main.storyboard
@@ -129,10 +129,10 @@
             </objects>
             <point key="canvasLocation" x="1292" y="128"/>
         </scene>
-        <!--View Controller-->
+        <!--Login-->
         <scene sceneID="HjZ-c4-9LX">
             <objects>
-                <viewController id="RhB-9Z-Vuc" sceneMemberID="viewController">
+                <viewController id="RhB-9Z-Vuc" customClass="Login" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RJh-C8-igq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
