Rename Home controller to List

--- a/Mi Primera Tabla/Base.lproj/Main.storyboard
+++ b/Mi Primera Tabla/Base.lproj/Main.storyboard
@@ -182,10 +182,10 @@
             </objects>
             <point key="canvasLocation" x="46" y="124"/>
         </scene>
-        <!--Home-->
+        <!--List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="Home" id="BYZ-38-t0r" customClass="Home" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Home" id="BYZ-38-t0r" customClass="List" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
